# livemobillrerun

./: .gitignore  AGENTS.md  QUICKSTART.md  README.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  BUILD_FROM_SOURCE.md  CAMERAHOOK_ANALYSIS.md  LSPATCH_BREAKTHROUGH.md  PHASE1_DEVICE_CHECK.md  PHASE3_UNLOCK_ROOT.md  PHASE4_HAL_HOOK.md  ROADMAP.md  STABILITY_ROADMAP_TH.md
scripts/: phase3_dump_boot.sh  phase3_flash_magisk.sh  phase3_post_root.sh  phase3_status.sh
vcam-app/: .gitignore  README.md  gradle.properties  settings.gradle.kts
vcam-app/app/: build.gradle.kts
vcam-app/tools/: bootstrap_build_macos.sh
vcam-magisk/: README.md  build.sh  build_native.sh
vcam-magisk/module/: customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh
vcam-magisk/src/: README.md
vcam-magisk/src/zygisk/: CMakeLists.txt  camera_hook.cpp  camera_hook.h  main.cpp  yuv_reader.cpp  yuv_reader.h  zygisk.h
vcam-pc/: README.md  config.json  device_profiles.json  requirements.txt
vcam-pc/assets/: logo.icns
vcam-pc/docs/: BUILD_INSTALLER.md  MANUAL_TH.md  SALES_KIT_TH.md
vcam-pc/scripts/: check_device.sh
vcam-pc/src/: __init__.py  _pubkey.py  _ssl.py  _startup_diagnostic.py  _winlauncher.py  adb.py  announcements.py  auto_update.py  backup_restore.py  branding.py  config.py  customer_devices.py  encode_push_runner.py  encode_push_tasks.py  ffmpeg_streamer.py  health.py  hook_mode.py  hook_status.py  license_history.py  license_key.py  license_server.py  live_control.py  log_setup.py  lspatch_pipeline.py  main.py  platform_tools.py  playlist.py  rtmp_server.py  scrcpy_installer.py  scrcpy_mirror.py  tcp_server.py  tiktok_controller.py  update_prefs.py  virtual_cam_apps.py  wifi_adb.py
vcam-server/: .env.example  .gitignore  Caddyfile  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
(+133 files in other folders)
